--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -47,8 +47,8 @@
   padding: 5px;
   font-size: 16px;
   padding-left: 80px;
-  background-color: black;
-  color: #edcb70;
+  background-color: black !important;
+  color: #edcb70 !important;
   outline: none;
   border: none;
   opacity: 0.8;
