--- a/src/components/AliceLogo.css
+++ b/src/components/AliceLogo.css
@@ -22,6 +22,10 @@
   cursor: pointer;
 }
 
+.alice-logo select:focus {
+  outline: none;
+}
+
 .alice-logo-img {
   position: absolute;
   height: 40vh;
