--- a/src/views/Login.css
+++ b/src/views/Login.css
@@ -13,9 +13,21 @@ select:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
 }
 
+.connexion {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-image: url("../assets/casino_spin.png");
+  background-position: center;
+  background-size: auto 90%;
+  background-repeat: no-repeat;
+}
+
 .connexion form {
-  width: min(90vw, 80vh);
-  padding: 1rem;
+  width: min(100vw, 50vh);
 }
 
 .connexion-top {
@@ -44,7 +56,7 @@ select:-webkit-autofill:focus {
   display: flex;
   justify-content: center;
   position: relative;
-  max-width: 300px;
+  max-width: max(300px, 60vw);
   margin: 0 auto;
 }
 
@@ -134,6 +146,20 @@ select:-webkit-autofill:focus {
 }
 
 @media (orientation: landscape) {
+  .connexion {
+    background-size: 80% auto;
+    min-height: 0px;
+  }
+
+  .connexion form {
+    width: min(100vh, 48vw);
+  }
+
+  .connexion-top {
+    margin-top: 0;
+    padding-top: 0;
+  }
+
   .connexion-middle {
     padding: 6vh 0 4vh 0;
   }
@@ -145,16 +171,10 @@ select:-webkit-autofill:focus {
   .connexion-wrapper {
     margin-top: 0px;
   }
-
-  .connexion-top {
-    margin-top: 0;
-    padding-top: 0;
-  }
 }
 
-@media screen and (min-width: 768px) and (orientation: portrait) {
-  .connexion-email,
-  .connexion-password {
-    max-width: 600px;
+@media screen and (max-width: 667px) and (orientation: landscape) {
+  .connexion-top {
+    padding: 2vh 1rem;
   }
 }
